--- a/.drone.yml
+++ b/.drone.yml
@@ -11,7 +11,8 @@ steps:
       from_secret: docker_password
     repo: quay.io/dotmesh/github-janitor
     registry: quay.io   
-    autotag: true
+    tags:
+    - ${DRONE_COMMIT}
 - name: slack
   image: plugins/slack
   when:
