--- a/.drone.yml
+++ b/.drone.yml
@@ -13,7 +13,7 @@ steps:
     registry: quay.io   
     tags:
     - ${DRONE_COMMIT}
-- name: docker  
+- name: deploy
   image: plugins/docker
   when:
     event: tag
